--- a/styles.css
+++ b/styles.css
@@ -4,3 +4,16 @@
     width: 100%;
     text-align: center;
 }
+
+.tooltip {
+    position: absolute;
+    text-align: center;
+    width: 120px;
+    height: 78px;
+    padding: 2px;
+    font: 12px sans-serif;
+    background: lightsteelblue;
+    border: 0px;
+    border-radius: 8px;
+    pointer-events: none;
+}
