--- a/styles.css
+++ b/styles.css
@@ -8,12 +8,12 @@
 .tooltip {
     position: absolute;
     text-align: center;
-    width: 120px;
-    height: 78px;
-    padding: 2px;
-    font: 12px sans-serif;
-    background: lightsteelblue;
-    border: 0px;
+    width: 180px;
+    height: auto;
+    padding: 10px;
+    background-color: lightgrey;
+    border: 1px solid #c6c6c6;
     border-radius: 8px;
     pointer-events: none;
+    opacity:0;
 }
